# WINGS

./: .gitignore  Beetle.py  CITATION.cff  Environment.py  LICENSE.md  README.md  Reproduction.py  ingest_data.py  local_paths.template.json  migrate.sh  plot_results.py  plot_wings.py  pyproject.toml  read_results.py  run_analysis.py  run_multiple_simulations.py  run_plots.py  run_simulation.py
.github/workflows/: docs.yml  release.yml  tests.yml
data/: diff_names.sh
docs/: conf.py  index.rst  installation.rst  quickstart.rst  scaling_guide.md
docs/_build/html/.doctrees/api/: analysis.doctree  index.doctree
docs/api/: analysis.rst  index.rst  models.rst
envs/: wings_cpu.yml  wings_dev.yml  wings_gpu.yml
gpu/: WINGS_scaling_guide.md  benchmark_gpu.py  fixed_generation_sim.py  gpu_simulation.py  ingest_delta_p.py  plot_delta_p.py  rerun_missing.sh  run_abm_05.sh  submit_delta_p.sh  submit_fixed.sh  submit_wings.sh
scripts/: benchmark_gpu.py  run_ana_plots.sh  run_analysis.py  run_batch.py  run_ingestion.py  run_multiple_simulations.py  run_plots.py  run_simulation.py
slurm/: analyse_lowfreq.sh  dp_lowfreq_single.sh  dp_single.sh  load_paths.sh  rerun_missing.sh  submit_abm.sh  submit_abm_05.sh  submit_delta_p.sh  submit_dp_lowfreq.sh  submit_dp_opportunistic.sh  submit_wfm.sh
tests/: test_gpu_abm.py  test_ingest.py  test_plot_helpers.py  test_stats.py  test_threshold.py  test_wfm.py
wings/: __init__.py  config.py
wings/analysis/: __init__.py  ingest.py  ingest_delta_p.py  plot_delta_p.py  plot_wings.py  stats.py  threshold.py  threshold_lowfreq.py
wings/models/: __init__.py  gpu_abm.py  run_dp_batch.py  wfm.py
wings/models/cpu/: __init__.py  beetle.py  environment.py  parameters.py  reproduction.py
